# todolist-sorter

./: .env.example  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
.github/workflows/: build_and_push_to_docker_registry.yaml
app/: auto.py  cli.py  config.py  db.py  debouncer.py  main.py  models.py  normalize.py  projects_ops.py  setup.py  sorter.py  suppression.py
app/backends/: base.py  registry.py  todoist.py
app/routes/: deps.py  oauth.py  projects.py  providers.py  setup.py  webhook.py
docs/: reverse-proxy-examples.md
docs/superpowers/plans/: 2026-04-18-todolist-sorter.md
docs/superpowers/specs/: 2026-04-18-todolist-sorter-design.md
scripts/: export_openapi.py
tests/: conftest.py  test_auth_dep.py  test_auto.py  test_backend_base.py  test_backend_registry.py  test_cli.py  test_cli_init.py  test_cli_status.py  test_config.py  test_db.py  test_debouncer.py  test_integration.py  test_main.py  test_models.py  test_normalize.py  test_routes_cache.py  test_routes_categories.py  test_routes_oauth.py  test_routes_projects.py  test_routes_providers.py  test_routes_setup.py  test_routes_webhook.py  test_setup.py  test_sorter.py  test_suppression.py  test_todoist_backend.py
